--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^23.1.1",
     "@types/node": "^10.3.4",
+    "@types/prop-types": "^15.5.3",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
     "typescript": "^2.9.2"
